--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Hello moi nguoi</h1>
-    <h2>khue</h2>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cunghoclaptrinh</title>
+</head>
+<body>
+<ul>
+    <li>Mai Dang Xuan   --train</li>
+    <li>Chau Quang Ha   --men</li>
+    <li>Tran ngoc khue  --men</li>
+    <li>Tan Quang       --men</li>
+</ul>
+</body>
 </html>
