--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li>Tran ngoc khue  --men</li>
     <li>Tan Quang       --men</li>
     <li>git & github    --</li>
+    <li>thuc hanh       --</li>
 </ul>
 </body>
 </html>
